# seed-finder

./: .clangd  CMakeLists.txt  find_biome.c
.github/workflows/: cmake-multi-platform.yml
src/: find_biome.c
tests/: CMakeLists.txt
